# agentic_obfuscator_deobfuscator_system

./: .gitignore  README.md  pyproject.toml  requirements.txt
agentic_obfuscator_deobfuscator/: .gitignore  README.md  code.c  pyproject.toml
agentic_obfuscator_deobfuscator/demo/: obf_code_demo.js  obf_code_demo.py  original_code.js  original_code.py
agentic_obfuscator_deobfuscator/ghidra_scripts/: CFGJsonExporterScript.java  DetectConditionalBranches.java  FindWritableExecutableAddresses.java  RenameVariablesObfuscation.java  analyse_binary.py
agentic_obfuscator_deobfuscator/ghidra_scripts/templates/: binary_obfuscation_techniques.py.template
agentic_obfuscator_deobfuscator/input/: example.py  example_obf_1.js  example_obf_1.py  test.py
agentic_obfuscator_deobfuscator/models_obf_result/: controller.py
agentic_obfuscator_deobfuscator/old_results/gpt-4o_1/: deobfuscated_code.js  example_obf_1.js
agentic_obfuscator_deobfuscator/old_results/gpt-4o_10/: syntax_repair_output.js
agentic_obfuscator_deobfuscator/old_results/gpt-4o_11/: deobfuscated_code.py  example_obf_1.py  syntax_repair_output.py
agentic_obfuscator_deobfuscator/old_results/gpt-4o_12/: deobfuscated_code.py  example_obf_1.py  syntax_repair_output.py
agentic_obfuscator_deobfuscator/old_results/gpt-4o_13/: deobfuscated_code.py
agentic_obfuscator_deobfuscator/output/: deobfuscated_code.js  syntax_repair_output.js  syntax_repair_output.py
obfuscation_deobfuscation_flow/: README.md  example.js  obfuscated_code.py  obfuscated_script.py  obfuscation_routing_flow.html  pyproject.toml  script.py
obfuscation_deobfuscation_flow/output/: complexity_analysis_output.json  corrected_obfuscated_code.py  execution_validation_result.json  feedback_loop_result.json  obfuscated_code.py  obfuscated_code_output.py  obfuscated_final.py  original.py  selected_techniques.json  semantic_equivalence_result.json  test.py  test_2.py
obfuscation_deobfuscation_flow/tests/: chatgpt_obfuscated.py  obfuscated_code.js  obfuscated_code.py  obfuscation.js  obfuscation.py  packed_code.py  selected_techniques.json  selected_techniques_javascript.json  string_encryption_obfuscation.py
prototype/: README.md  pyproject.toml  requirements.txt
prototype/obfuscation_deobfuscation_crew/: pyproject.toml
prototype/samples/: calculator.py  hello.js
prototype/src/obfusc_deobfusc/: crew.py  main.py  (+1 more)
(+229 files in other folders)
