[project]
name = "obfusc_deobfusc"
version = "0.1.0"
description = "agents_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
agents_crew = "obfusc_deobfusc.main:run"
run_crew = "obfusc_deobfusc.crew:run"
train = "obfusc_deobfusc.main:train"
replay = "obfusc_deobfusc.main:replay"
test = "obfusc_deobfusc.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

